--- a/stack.yml
+++ b/stack.yml
@@ -7,7 +7,8 @@ functions:
     lang: csharp-httprequest
     handler: ./twilio-send-verify
     secrets:      
-    - twilio-creds
+    - twilio-account-sid
+    - twilio-auth-token
     labels:
       com.openfaas.scale.zero: false
     environment:
